# clipper

./: .gitignore  LICENSE  README.md  config.example.json  config.schema.json  pyproject.toml  userconfig.example.py
clipper/: __init__.py  __main__.py
clipper/api/: __init__.py  baidu.py  base.py  lingocloud.py
clipper/config/: __init__.py
